Ortiqcha narsalar o'chirildi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="email_address">bahromjon.ergashboyev@gmail.com</string>
     <string name="tg_channel">Telegram channel</string>
     <string name="tg_ch_address">https://t.me/technickpro</string>
-    <string name="instagram">https://instaagram.com/i.m_bahromjon</string>
+    <string name="instagram">https://instagram.com/i.m_bahromjon</string>
     <string name="facebook">https://facebook.com/bahromjon.polat</string>
 
 </resources>
